[metadata]
name = whmcs
version = 0.1
author = Logan Bibby <logan@keobi.com>
description = Python API library for WHMCS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keobi/py-whmcs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    marshmallow>=3.17.1
    requests>=2.28.1
